# godot-pd

./: .clangd  .gitignore  .gitmodules  CMakeLists.txt  README.md  dev.macos.sh
.github/workflows/: build.yml
demo/: icon.svg.import  project.godot
demo/addons/godot-pd/: godot-pd.gdextension  godot-pd.gdextension.uid
demo/addons/godot-pd/icons/: audio_stream_pd.svg.import
demo/pd/: test-send.pd
demo/scenes/: main.gd.uid  main.tscn
demo/scenes/autoload/: audio_stream_player_pd.gd.uid
src/: audio_stream_pd.cpp  audio_stream_pd.h
